Fixade så att scrollbaren alltid är nere samt att man kan skicka in arrays med html tags, gjorde detta genom att göra om addline funktionen

--- a/style.css
+++ b/style.css
@@ -1,30 +1,54 @@
 body {
   color: #519975;
   background: #211d1b;
+  font-family: cursor, monospace;
+  padding-left: 15px;
+  white-space: nowrap;
 }
-
+#mainText {
+  margin-bottom: 5px;
+}
+#startText {
+  color: #dcdccc;
+}
+#underBanner {
+  color: #dcdccc;
+}
 #terminal::before {
   color: #519975;
-  content: "visitor@fkcodes.com:~$";
+  content: "guest@adamrohr.com~$";
   margin: 0;
-  padding: 0;
 }
-
+#commandText {
+  color: #00b8be;
+  text-shadow: 0 0 5px #73abad;
+}
+#welcomeText {
+  padding-bottom: 40px;
+  margin-bottom: 10px;
+}
 p {
   display: block;
-  line-height: 1.3em;
+
   margin: 0;
   overflow: hidden;
-  white-space: nowrap;
+  white-space: pre;
   margin: 0;
-
-  animation: typing 0.5s steps(30, end);
+  animation: typing 1s steps(30, end);
 }
 
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
 textarea {
-  color: #519975;
+  color: #00b8be;
   background-color: #211d1b;
-  left: 170px;
+  left: 205px;
   position: absolute;
   border: none;
   outline: none;
